Fix #9 (Logo blurred on non-webkit browsers)
Not fixed for MS Edge because it does not comply with any standards.

--- a/css/common.css
+++ b/css/common.css
@@ -27,7 +27,13 @@ header {
     width: 5em;
     height: 5em;
 
+    image-rendering: optimizeSpeed;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
     image-rendering: pixelated;
+    image-rendering: optimize-contrast;
+    -ms-interpolation-mode: nearest-neighbor;
 }
 
 #title {
